--- a/index.html
+++ b/index.html
@@ -1682,7 +1682,7 @@
             {
                 "id": 1,
                 "title": "Old Man Swag",
-                "cover": "https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80",
+                "cover": "https://github.com/coolwinner678/members-area/blob/main/Dj-Mega-Tron-Logo.png?raw=true",
                 "year": "2022",
                 "description": "The first collection of bangers from DJ Megatron",
                 "tracks": [
@@ -1828,6 +1828,108 @@
                     },
                     
                     
+                ]
+            },
+            {
+                "id": 2,
+                "title": "Urban Chronicles",
+                "cover": "https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80",
+                "year": "2023",
+                "description": "Street anthems and urban stories",
+                "tracks": [
+                    {
+                        "id": 7,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Gangster Prod. By Cartekeys",
+                        "duration": "3:31",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20GANGSTER%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 8,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Got Em Mad Feat. Jenn",
+                        "duration": "3:52",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20GOT%20EM%20MAD%20FT%20JENN.mp3"
+                    },
+                    {
+                        "id": 9,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Hey Hey Hey",
+                        "duration": "3:13",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20HEY%20HEY%20HEY.mp3"
+                    },
+                    {
+                        "id": 10,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Hot 40 Dollars",
+                        "duration": "3:42",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20HOT%2040%20DOLLARS.mp3"
+                    },
+                    {
+                        "id": 11,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Huh",
+                        "duration": "5:30",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20HUH.mp3"
+                    },
+                    {
+                        "id": 12,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - I Need It Feat. Cash",
+                        "duration": "4:45",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20I%20NEED%20IT%20FT%20CASH.mp3"
+                    }
+                ]
+            },
+            {
+                "id": 3,
+                "title": "Street Legends",
+                "cover": "https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80",
+                "year": "2024",
+                "description": "Legends are born in the streets",
+                "tracks": [
+                    {
+                        "id": 13,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Jealousy",
+                        "duration": "4:13",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20JEALOUSY.mp3"
+                    },
+                    {
+                        "id": 14,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Joy Pain Prod. By Cartekeys",
+                        "duration": "5:05",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20JOY%20PAIN%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 15,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Kente Cartekeys",
+                        "duration": "2:41",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20KENTE%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 16,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Megatron Prod. By Cartekeys",
+                        "duration": "4:29",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20MEGATRON%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 17,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Merry Christmas",
+                        "duration": "4:22",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20MERRY%20CHRISTMAS.mp3"
+                    },
+                    {
+                        "id": 18,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Monica And Tasha Miller Prod. By Mega Tron",
+                        "duration": "5:35",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20MONICA%20AND%20TASHA%20MILLER%20PROD%20BY%20MEGA%20TRON.mp3"
+                    }
                 ]
             }
         ];
