--- a/index.html
+++ b/index.html
@@ -1682,7 +1682,7 @@
             {
                 "id": 1,
                 "title": "Old Man Swag",
-                "cover": "https://github.com/coolwinner678/members-area/blob/main/Dj-Mega-Tron-Logo.png?raw=true",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/Dj-Mega-Tron-Logo.png",
                 "year": "2022",
                 "description": "The first collection of bangers from DJ Megatron",
                 "tracks": [
