--- a/index.html
+++ b/index.html
@@ -1832,52 +1832,150 @@
             },
             {
                 "id": 2,
-                "title": "Urban Chronicles",
-                "cover": "https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80",
-                "year": "2023",
+                "title": "This Old Man",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/white-Dj-Mega-Tron-Logo.jpg",
+                "year": "2022",
                 "description": "Street anthems and urban stories",
                 "tracks": [
                     {
-                        "id": 7,
+                        "id": 21,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Gangster Prod. By Cartekeys",
+                        "title": "Dj Mega[tron] - Face Down Ft Carte",
+                        "duration": "3:06",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/Mega%5BTron%5D%20-%20Face%20Down%20ft.%20Carte.mp3"
+                    },
+                    {
+                        "id": 22,
+                        "type": "music",
+                        "title": "Dj Mega[Tron] - Street Life ft. TayDay and Minus K",
+                        "duration": "3:32",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/Mega%5BTron%5D%20-%20Street%20Life%20ft.%20TayDay%20and%20Minus%20K'%20(DJ%20Help).mp3"
+                    },
+                    {
+                        "id": 23,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - No Love",
+                        "duration": "2:49",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/Dj%20Mega%5Btron%5D-No%20Love%20Prodby%20Cartekeys.mp3"
+                    },
+                    {
+                        "id": 24,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Trappin",
+                        "duration": "2:37",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-TRAPPIN%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 25,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Hatin",
+                        "duration": "2:57",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-HATIN%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 26,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Cash Machine",
+                        "duration": "3:01",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%2520MEGA%255BTRON%255D-CASH%2520MACHINE%2520PROD%2520BY%2520CARTEKEYS%2520%5Bh1cpAg5DdAQ%5D.mp3"
+                    },
+                    {
+                        "id": 27,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Why",
+                        "duration": "3:01",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-WHY.mp3"
+                    },
+                    {
+                        "id": 28,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - No Good",
+                        "duration": "3:07",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-NO%20GOOD.mp3"
+                    },
+                    {
+                        "id": 29,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - In My Zone",
+                        "duration": "3:55",
+                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20IN%20MY%20ZONE.mp3"
+                    },
+                    {
+                        "id": 30,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Hoes",
                         "duration": "3:31",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20GANGSTER%20PROD%20BY%20CARTEKEYS.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%2520MEGA%255BTRON%255D-HOES%2520%5BOxbA_egBEEI%5D.mp3"
                     },
                     {
-                        "id": 8,
+                        "id": 31,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Got Em Mad Feat. Jenn",
-                        "duration": "3:52",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20GOT%20EM%20MAD%20FT%20JENN.mp3"
+                        "title": "Dj Mega[tron] - Shop With Us Ft Dj Help",
+                        "duration": "3:47",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20Mega%5BTron%5D%20-%20Shop%20Wit%20Us%20ft.%20Minus%20K'%20aka%20(DJ%20HELP).mp3"
                     },
                     {
-                        "id": 9,
+                        "id": 32,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Hey Hey Hey",
-                        "duration": "3:13",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20HEY%20HEY%20HEY.mp3"
+                        "title": "Carte Ft Dj Mega[tron] - Rumors",
+                        "duration": "3:00",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/Carte'%20-%20Rumors%20ft.%20Mega%5BTron%5D.mp3"
                     },
                     {
-                        "id": 10,
+                        "id": 33,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Hot 40 Dollars",
-                        "duration": "3:42",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20HOT%2040%20DOLLARS.mp3"
+                        "title": "Dj Mega[tron] - The Way (Gospel song)",
+                        "duration": "3:02",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-THE%20WAY%20(GOSPEL)%20PROD%20BY%20CARTEKEYS.mp3"
                     },
                     {
-                        "id": 11,
+                        "id": 34,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Huh",
-                        "duration": "5:30",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20HUH.mp3"
+                        "title": "Dj Mega[tron] - Playa",
+                        "duration": "3:37",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-PLAYA.mp3"
                     },
                     {
-                        "id": 12,
+                        "id": 35,
                         "type": "music",
-                        "title": "Dj Mega[tron] - I Need It Feat. Cash",
-                        "duration": "4:45",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20I%20NEED%20IT%20FT%20CASH.mp3"
+                        "title": "Dj Mega[tron] - Pillow Talk",
+                        "duration": "3:49",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-PILLOW%20TALK%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 36,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Guns Down Hands up",
+                        "duration": "4:01",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-GUNS%20DOWN%20HANDS.mp3"
+                    },
+                    {
+                        "id": 37,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - TX 2 ATL",
+                        "duration": "3:30",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJMEGA%5BTRON%5D-%20TX%202%20ATL.mp3"
+                    },
+                    {
+                        "id": 38,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Badass ",
+                        "duration": "3:18",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-BADASS%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 39,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Pimpin",
+                        "duration": "4:01",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-PIMPIN.mp3"
+                    },
+                    {
+                        "id": 40,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Dial Tone",
+                        "duration": "3:22",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20DIAL%20TONE.mp3"
                     }
                 ]
             },
