--- a/index.html
+++ b/index.html
@@ -1981,53 +1981,174 @@
             },
             {
                 "id": 3,
-                "title": "Street Legends",
-                "cover": "https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80",
-                "year": "2024",
+                "title": "Friendemies",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/DJ-Megatron-logo-yellow.jpg",
+                "year": "2022",
                 "description": "Legends are born in the streets",
                 "tracks": [
                     {
-                        "id": 13,
+                        "id": 41,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Jealousy",
-                        "duration": "4:13",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20JEALOUSY.mp3"
+                        "title": "Dj Mega[tron] - Official Bitch",
+                        "duration": "3:11",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20Mega%5BTron%5D%20-%20Official%20Bitch.mp3"
                     },
                     {
-                        "id": 14,
+                        "id": 42,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Joy Pain Prod. By Cartekeys",
-                        "duration": "5:05",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20JOY%20PAIN%20PROD%20BY%20CARTEKEYS.mp3"
+                        "title": "Dj Mega[tron] - Drop It",
+                        "duration": "4:09",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%20%5BTRON%5D-DROP%20IT%20PROD%20BY%20CARTEKEYS.mp3"
                     },
                     {
-                        "id": 15,
+                        "id": 43,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Kente Cartekeys",
-                        "duration": "2:41",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20KENTE%20CARTEKEYS.mp3"
+                        "title": "Dj Mega[tron] - American Dream",
+                        "duration": "3:29",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%20%5BTRON%5D-AMERICAN%20DREAM%20PROD%20BY%20CARTEKEYS.mp3"
                     },
                     {
-                        "id": 16,
+                        "id": 44,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Megatron Prod. By Cartekeys",
+                        "title": "Dj Mega[tron] - H.A.N",
                         "duration": "4:29",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20MEGATRON%20PROD%20BY%20CARTEKEYS.mp3"
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-H.A.N.mp3"
                     },
                     {
-                        "id": 17,
+                        "id": 45,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Merry Christmas",
-                        "duration": "4:22",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20MERRY%20CHRISTMAS.mp3"
+                        "title": "Dj Mega[tron] - World Spin",
+                        "duration": "3:23",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-WORLD%20SPIN_NEW.mp3"
                     },
                     {
-                        "id": 18,
+                        "id": 46,
                         "type": "music",
-                        "title": "Dj Mega[tron] - Monica And Tasha Miller Prod. By Mega Tron",
-                        "duration": "5:35",
-                        "audioSrc": "https://pub-59b2958112553c03fce0a235c94b3bb0.r2.dev/megatron-music/DJ%20MEGA%5BTRON%5D-%20MONICA%20AND%20TASHA%20MILLER%20PROD%20BY%20MEGA%20TRON.mp3"
+                        "title": "Dj Mega[tron] - Things To Do Ft Carte Keys",
+                        "duration": "2:49",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/Dj%2520Mega%255Btron%255D-things%2520to%2520do%2520ft%2520Cartekeys%2520%5BSJDOdg6qlAs%5D.mp3"
+                    },
+                    {
+                        "id": 47,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Real Vs Fake",
+                        "duration": "3:31",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-REAL%20VS%20FAKE%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 48,
+                        "type": "music",
+                        "title": "Dj Mega[tron] -Smoke",
+                        "duration": "3:31",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-SMOKE%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 49,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Fathers Day",
+                        "duration": "3:01",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%2520MEGA%255BTRON%255D-FATHERS%2520DAY%2520PROD%2520BY%2520CARTEKEYS%2520%5Bgj8ym8tU8XI%5D.mp3"
+                    },
+                    {
+                        "id": 50,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Shonda",
+                        "duration": "3:08",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-SHONDA%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 51,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Wicked Ft Rude Rick",
+                        "duration": "3:02",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-WICKED%20FT%20RUDE%20RICK%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 52,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - 100,000",
+                        "duration": "3:02",
+                        "audioSrc": "Dhttps://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%2520MEGA%255BTRON%255D-100%252C000%2520PROD%2520BY%2520CARTEKEYS%2520%5Bs7UDQirx6lg%5D.mp3"
+                    },
+                    {
+                        "id": 53,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Jeoalous Ft Stranger",
+                        "duration": "3:41",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%2520MEGA%255BTRON%255D-JEALOUS%2520FT%2520STRANGER%2520PROD%2520BY%2520CARTEKEYS%2520%5B_3Zg0rZt5rg%5D.mp3"
+                    },
+                    {
+                        "id": 54,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Drunk",
+                        "duration": "3:01",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJMEGA%5BTRON%5D-DRUNK%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 55,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Frienemies",
+                        "duration": "4:20",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%2520MEGA%255BTRON%255D-FRENEMIES%2520PROD%2520BY%2520CARTEKEYS%2520%5BFbG5VywPpAA%5D.mp3"
+                    },
+                    {
+                        "id": 56,
+                        "type": "music",
+                        "title": "Dj Help Jeolousy",
+                        "duration": "3:48",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/Minus%20K'%20(DJ%20Help)%20-%20Jealousy.mp3"
+                    },
+                    {
+                        "id": 57,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Shine",
+                        "duration": "3:18",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-SHINE%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 58,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - My Brother's Keeper",
+                        "duration": "3:40",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/Dj%20MEGA%5BTRON-MY%20BROTHERS%20KEEPER%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 59,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Big Homie Who",
+                        "duration": "4:01",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-BIG%20HOMIE%20WHO__%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 60,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - What You Got Ft Big Dymond",
+                        "duration": "4:08",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJMEGA%5BTRON%5D-WHAT%20YOU%20GOT%20FT%20BIG%20DYMOND%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 61,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Mario Bro's (YOSHI)",
+                        "duration": "4:23",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-MARIO%20BROS%20(YOSHI)%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 62,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Neechie FN",
+                        "duration": "3:05",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-PRESENTS%20NEECHIE%20FN%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 63,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Nika",
+                        "duration": "2:56",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-NIKA%20PROD%20BY%20CARTEKEYS.mp3"
                     }
+                    
+
                 ]
             }
         ];
