--- a/index.html
+++ b/index.html
@@ -2150,6 +2150,155 @@
                     
 
                 ]
+            },
+            {
+                "id": 4,
+                "title": "Man In The Mirror",
+                "cover": "https://raw.githubusercontent.com/coolwinner678/members-area/main/Man-in-the-mirror-cvr.jpg",
+                "year": "2023",
+                "description": "Mirror Mirror on the wall who's the most Gangsta of them all?",
+                "tracks": [
+                    {
+                        "id": 64,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Pretty Boy Who",
+                        "duration": "4:16",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-PRETTY%20BOY%20WHO%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 65,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - 40",
+                        "duration": "3:52",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-40%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 66,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Hoshi",
+                        "duration": "3:50",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20hoshi%20prod%20by%20cartekeys.mp3"
+                    },
+                    {
+                        "id": 67,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Momma",
+                        "duration": "4:01",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-MOMMA%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 68,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Chasin",
+                        "duration": "3:40",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-CHASIN%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 69,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - STP 4 Life",
+                        "duration": "4:03",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-STP%204LIFE%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 70,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Doe Swing",
+                        "duration": "4:10",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-DOE%20SWING%20PROD%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 71,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Can't",
+                        "duration": "4:31",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20Can%E2%80%99t..mp3"
+                    },
+                    {
+                        "id": 72,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - King Leo",
+                        "duration": "3:46",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20King.%20Leo.mp3"
+                    },
+                    {
+                        "id": 73,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Wilderbeast",
+                        "duration": "3:17",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20WILDERBEAST.%20PRO.%20BY%20CARTEKEYS.mp3"
+                    },
+                    {
+                        "id": 74,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Back Rollin",
+                        "duration": "4:15",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20backrollin%20procbycartekeys.mp3"
+                    },
+                    {
+                        "id": 75,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Mr 400,000",
+                        "duration": "3:47",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20Mr400%20000probycartekeys%20%20400%20%20000.mp3"
+                    },
+                    {
+                        "id": 76,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Man In The Mirror",
+                        "duration": "3:26",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D-%20%20man%20in%20the%20mirror%20prodby%20cartekeys.mp3"
+                    },
+                    {
+                        "id": 77,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Pour it up",
+                        "duration": "3:46",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20Pour%20it%20up.%20%20%20prod%20you%20cartekeys.mp3"
+                    },
+                    {                        
+                        "id": 78,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - True views Who Disloyal. People!",
+                        "duration": "3:53",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20Tru%20views.%20%20Who%20%20disloyal.%20People.%20prod%20by%20cartekeys.mp3"
+                    },
+                    {
+                        "id": 79,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - No More True",
+                        "duration": "2:53",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20No%20more%20tru.%20%20prodbycarekeys.mp3"
+                    },
+                    {
+                        "id": 80,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Can We",
+                        "duration": "3:31",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20Can.%20We.%20%20Prodbycartekeys.mp3"
+                    },
+                    {
+                        "id": 81,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Cake Day",
+                        "duration": "3:37",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20Cake%20day%20%20prodbycartekeys.mp3"
+                    },
+                    {
+                        "id": 82,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Bobby Iceberg Bitch",
+                        "duration": "4:12",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20Bobby%20iceberg%20%20bitch%20-%20prod%20by%20cartekeys.mp3"
+                    },
+                    {
+                        "id": 83,
+                        "type": "music",
+                        "title": "Dj Mega[tron] - Geeked Up",
+                        "duration": "3:57",
+                        "audioSrc": "https://pub-88f793b777bf4ce795025f8a191f622a.r2.dev/DJ%20MEGA%5BTRON%5D%20-%20Geeked%20.%20Up.%20%20%20%20%20fea%20cartekeys.%20%20Prod%20by%20cartekeys.mp3"
+                    }
+                ]
             }
         ];
 
